[tool.poetry]
name = "ecgcaptiongenerator"
version = "0.1.0"
description = ""
authors = ["Mathieu Bartels <mathieubartels@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.8"
pytorch-lightning = "=1.5.10"
pandas = "=1.4.1"
nltk = "=3.7"
numpy = "=1.22.3"
lorem = "=0.1.1"
torch = "=1.11.0"
scikit-learn = "=1.0.2"
torchvision = "=0.12.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
